[package]
name = "toolkit-utils"
version = "0.1.0"
edition = "2021"
license = "GPL"

readme = "README.md"
repository = "https://github.com/rem-codes-development/toolkit-utils"

[dependencies]
candid = {version = "0.10", features = ["value"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

ic-cdk = "0.17"
ic-ledger-types = "0.14.0"
ic-stable-structures = "0.6"
base64 = "0.22.1"
ic-http-certification = "2.6"

email_address = "0.2"
unicode-segmentation = "1"
icrc-ledger-types = "0.1"
wasmparser = "0.219"
flate2 = "1.0"

