[package]
name = "toolkit-utils"
version = "0.1.0"
edition = "2021"
license = "GPL"

readme = "README.md"
repository = "https://github.com/rem-codes-development/toolkit-utils"

[dependencies]
candid = {version = "0.10", features = ["value"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"

ic-cdk = "0.18"
ic-ledger-types = "0.15.0"
ic-stable-structures = "0.6.8"
base64 = "0.22.1"
ic-http-certification = "3.0.3"

email_address = "0.2.0"
unicode-segmentation = "1.12.0"
icrc-ledger-types = "0.1.8"
wasmparser = "0.229.0"
flate2 = "1.1.1"

